--- a/actix-plus-static-files/examples/static/index.html
+++ b/actix-plus-static-files/examples/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Example HTML page</title>
-		<script src="nested-file-test/alert.js"></script>
+		<script src="./nested-file-test/alert.js"></script>
 	</head>
 	<body onload="loaded()">
 		This is an example static page.
